// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expenses 
    totaling 
    1.95 $
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with 2 expeneses 1`] = `
<div>
  <p>
    Viewing 
    13
     
    expenses 
    totaling 
    23,446.95 $
  </p>
</div>
`;
